# simple

./: Cargo.toml  README.md
src/: aggregator.rs  cli.rs  lib.rs  main.rs
