[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.35.1", features = ["full"]}
tokio-tungstenite = {version = "0.15", features = ["native-tls"]}
serde_json =  "1.0"
serde = {version ="1.0", features=["derive"]}
futures-util = "0.3.30"
url = "2.5.0"
clap = {version = "2" }
env_logger = "0.10.1"
log = "0.4.20"
regex = "1.10.2"
